--- a/index.html
+++ b/index.html
@@ -5,52 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>todododo</title>
-    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
-    <h1 class="title">Things to do</h1>
-
+    <h1 class="title">To do</h1>
     <div class="tasks">
       <h2 class="task-list-title">My tasks</h2>
-      <ul class="task-list">
-        <li class="active-list">Youtube</li>
-        <li>Work</li>
-        <li>Grocery</li>
-      </ul>
-      <form action="">
-        <input type="text" class="new-list" placeholder="new list name" required>
+      <ul class="task-list"></ul>
+      <form action="" class="new-list-form">
+        <input
+          type="text"
+          class="new-list"
+          placeholder="New list name"
+          required
+          autofocus
+        />
         <button class="btn list">+</button>
       </form>
     </div>
-
     <div class="todo-list">
       <div class="todo-header">
-        <h2 class="list-title" contenteditable="true" spellcheck="false">Youtube</h2>
-        <p class="task-count">3 task remaining</p>
+        <h2 class="list-title" contenteditable="true" spellcheck="false"></h2>
+        <p class="task-count" data-task-count></p>
       </div>
       <div class="todo-body">
-        <div class="tasks">
-          <div class="task">
-            <input type="checkbox" id="task-1" class="check-box">
-            <div contenteditable="true" spellcheck="false">Lorem, ipsum dolor sit amet consectetuptatibus eum repellend</div>
-            <button class="delete"><img src="sources/trash-solid.svg" alt="" class="icon"></button> 
-          </div>
-          <div class="task">
-            <input type="checkbox" id="task-2" class="check-box">
-            <div contenteditable="true" spellcheck="false">hello</div>
-            <button class="delete"><img src="sources/trash-solid.svg" alt="" class="icon"></button>
-          </div>
-          <div class="task">
-            <input type="checkbox" id="task-3" class="check-box">
-            <div contenteditable="true" spellcheck="false">sd</div>
-            <button class="delete"><img src="sources/trash-solid.svg" alt="" class="icon"></button>
-          </div>
-        </div>
+        <ul class="tasks"></ul>
 
         <div class="new-tasks">
           <form action="" class="new-form">
-            <input type="text" class="new-task" placeholder="enter task">
+            <input type="text" class="new-task" placeholder="Enter task" required/>
             <button class="btn add">+</button>
           </form>
         </div>
@@ -61,5 +45,15 @@
         </div>
       </div>
     </div>
+    <button class="mobile" onclick="afocus()">+</button>
+    <template id="task-template">
+      <li class="task">
+        <input type="checkbox" class="check-box" />
+        <div contenteditable="true" spellcheck="false"></div>
+        <button class="delete">
+          <img src="sources/trash-solid.svg" alt="" class="icon" />delete task
+        </button>
+      </li>
+    </template>
   </body>
 </html>
