--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>todododo</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="sources/icons8-todo-list-96.png" type="image/icon type">
     <script src="script.js" defer></script>
   </head>
   <body>
