--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>todododo</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="sources/icons8-todo-list-96.png" type="image/icon type">
+    <link
+      rel="icon"
+      href="sources/icons8-todo-list-96.png"
+      type="image/icon type"
+    />
     <script src="script.js" defer></script>
   </head>
   <body>
@@ -35,13 +39,19 @@
 
         <div class="new-tasks">
           <form action="" class="new-form">
-            <input type="text" class="new-task" placeholder="Enter task" required/>
+            <input
+              type="text"
+              class="new-task"
+              placeholder="Enter task"
+              required
+            />
             <button class="btn add">+</button>
           </form>
         </div>
 
         <div class="operator">
           <button class="sort">Sort</button>
+          <button class="delete-checked">Delete checked</button>
           <button class="delete-list">Delete list</button>
         </div>
       </div>
