--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           type="text"
           class="new-list"
           placeholder="New list name"
+          maxlength="25"
           required
           autofocus
         />
@@ -31,7 +32,12 @@
     </div>
     <div class="todo-list">
       <div class="todo-header">
-        <h2 class="list-title" contenteditable="true" spellcheck="false"></h2>
+        <h2
+          class="list-title"
+          contenteditable="true"
+          spellcheck="false"
+          onkeypress="return (this.innerText.length < 25)"
+        ></h2>
         <p class="task-count" data-task-count></p>
       </div>
       <div class="todo-body">
